# hr-mcp

./: .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  install_uv.ps1  main.py  pyproject.toml  pytest.ini  requirements.txt  test_streaming_client.html
.dumper/: output.txt  output_20250829_113839.txt  output_20250829_115852.txt  output_20250829_140001.txt  output_20250829_141219.txt  output_20250829_142138.txt  output_20250829_143640.txt  output_20250903_073552.txt  output_20250908_140007.txt
.source/: 20250904_accrual_return.txt
.source/marker/: employee-handbook-updated.json  (+3 more)
.summary/: CLIENT_OPTIMIZATION_IMPLEMENTATION.md  REFACTORING_SUMMARY.md  RESPONSE_PROCESSOR_OPTIMIZATION.md  STREAMING_IMPLEMENTATION.md  STREAMING_SUMMARY.md  TOKEN_CACHING_IMPLEMENTATION.md
auth/: __init__.py  graph_auth.py  power_automate_auth.py  service_auth.py  vp_auth.py
debug/: last_owui_resp.json
test_scripts/: check_network.ps1  diagnose_performance.py  performance_profiler.py  simple_test_service_token.py  test_api_with_caching.py  test_client_registry.py  test_client_scenarios.py  test_current_user_email.py  test_dns_vs_ip.py  test_graph_and_pa.py  test_graph_token.py  test_integration.py  test_owui_direct.py  test_response_processor_optimization.py  test_service_token.py  test_streaming.py  test_token_caching.py  test_vp_auth_live.py
utils/: accrual_parser.py  api_models.py  client_registry.py  config.py  datetime_utils.py  employment_data.py  environment.py  http_client.py  page_index.py  response_processor.py  security.py  vacation_data.py  vantagepoint.py
(+24 files in other folders)
