[project]
name = "tool-name-here"
version = "0.0.1"
description = "FastAPI-based REST API for **YOUR TOOL NAME HERE** MCP integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "requests"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio"
]
